# MFEMElectrostatics

./: .gitignore  run_shell.sh
docker/: Dockerfile  docker-compose.yml
geometries/: README.md
geometries/3D_TPC/: main.cpp  solver_params.yaml
geometries/SR3nTCOMSOLVerification/: CMakeLists.txt  README.md  config.yaml  main.cpp  salome_script.py
src/: CMakeLists.txt  ComputeElectricField.h  README.md  boundary_conditions.cpp  boundary_conditions.h  cmdLineParser.cpp  load_mesh.cpp  load_mesh.h  main.cpp  solver.cpp  solver.h
src/config/: Config.cpp  Config.h
src/geometry/: main.cpp  solver_params.yaml
